--- a/staticweb/manifest/ingress.yml
+++ b/staticweb/manifest/ingress.yml
@@ -6,7 +6,7 @@ metadata:
     alb.ingress.kubernetes.io/load-balancer-name: demo
     alb.ingress.kubernetes.io/scheme: internet-facing
     alb.ingress.kubernetes.io/healthcheck-path: /
-    alb.ingress.kubernetes.io/target-type": ip
+    alb.ingress.kubernetes.io/target-type: ip
 spec:
   ingressClassName: alb
   rules:
