--- a/.github/workflows/workflow.yml
+++ b/.github/workflows/workflow.yml
@@ -2,23 +2,26 @@ name: build
 on:
   push:
     branches: [ main ]
+  pull_request:
+    branches: [ main ]
+
 jobs:
   build:
     name: build image
     runs-on: ubuntu-latest
     permissions:
-      id-token: write
-      contents: read
+      id-token: write # This is required for requesting the JWT
+      contents: read #This is required for actions/checkout
     
     steps:
       - name: checkout
         uses: actions/checkout@v3
   
       - name: Configure AWS credentials
-        uses: aws-actions/configure-aws-credentials@master
+        uses: aws-actions/configure-aws-credentials@v1.7.0
         with:
           role-to-assume: arn:aws:iam::485201455091:role/IamRoleforGithubAction
-          aws-region: us-east-1
+          aws-region: ${{ vars.AWS_REGION }}
       
       - name: Login to Amazon ECR Public
         id: login-ecr-public
