--- a/.github/workflows/workflow.yml
+++ b/.github/workflows/workflow.yml
@@ -14,14 +14,19 @@ jobs:
       contents: read #This is required for actions/checkout
     
     steps:
-      - name: checkout
+      - name: Git clone the repository
         uses: actions/checkout@v3
   
       - name: Configure AWS credentials
         uses: aws-actions/configure-aws-credentials@v1.7.0
         with:
           role-to-assume: arn:aws:iam::485201455091:role/IamRoleforGithubAction
+          role-sesion-name: GitHub_to_AWS_via_FederatedOIDC
           aws-region: ${{ vars.AWS_REGION }}
+      
+      - name: Sts GetCallerIdentity
+        run: | 
+          aws sts get-caller-identity
       
       - name: Login to Amazon ECR Public
         id: login-ecr-public
