--- a/.github/workflows/workflow.yml
+++ b/.github/workflows/workflow.yml
@@ -20,8 +20,8 @@ jobs:
       - name: Configure AWS credentials
         uses: aws-actions/configure-aws-credentials@v1.7.0
         with:
-          role-to-assume: arn:aws:iam::485201455091:role/IamRoleforGithubAction
-          role-sesion-name: GitHub_to_AWS_via_FederatedOIDC
+          role-to-assume: ${{ secrets.IAM_ROLE_GITHUB_ACTIONS }}
+          role-sesion-name: audience
           aws-region: ${{ vars.AWS_REGION }}
       
       - name: Sts GetCallerIdentity
