--- a/.github/workflows/workflow.yml
+++ b/.github/workflows/workflow.yml
@@ -33,11 +33,10 @@ jobs:
         uses: aws-actions/amazon-ecr-login@v1
         with:
           registry-type: public
-          aws-region: us-east-1
 
       - name: Build, tag, and push docker image to Amazon ECR Public
         env:
-          REGISTRY: ${{ steps.login-ecr-public.outputs.registry }}ssss
+          REGISTRY: ${{ steps.login-ecr-public.outputs.registry }}
           REGISTRY_ALIAS: ${{ secrets.ECR_PUBLIC_REPO_ALIAS }}
           REPOSITORY: ${{ secrets.ECR_PUBLIC_REPO }}
           IMAGE_TAG: ${{ github.sha }}
