--- a/.github/workflows/workflow.yml
+++ b/.github/workflows/workflow.yml
@@ -45,7 +45,12 @@ jobs:
           docker build -t $REGISTRY/$REGISTRY_ALIAS/$REPOSITORY:$IMAGE_TAG .
           echo "Pushing the image to ECR..."
           docker push $REGISTRY/$REGISTRY_ALIAS/$REPOSITORY:$IMAGE_TAG
-      
+
+      - name: Update image version
+        uses: mikefarah/yq@master
+        with:
+          cmd: yq -i '.spec.template.spec.containers[0].image = "$REGISTRY/$REGISTRY_ALIAS/$REPOSITORY:$IMAGE_TAG"' staticweb/manifest/deployment.yml
+
       - name: Commit and push changes
         uses: actions-js/push@master
         with:
