--- a/.github/workflows/workflow.yml
+++ b/.github/workflows/workflow.yml
@@ -12,10 +12,12 @@ jobs:
     permissions:
       id-token: write # This is required for requesting the JWT
       contents: read #This is required for actions/checkout
-    
+
     steps:
       - name: Git clone the repository
         uses: actions/checkout@v3
+        with:
+          token: ${{ secrets.GITHUB_TOKEN }}
   
       - name: Configure AWS credentials
         uses: aws-actions/configure-aws-credentials@v1.7.0
@@ -53,8 +55,8 @@ jobs:
 
       - name: Commit and push changes
         uses: actions-js/push@master
-        with:
-          github_token: ${{ secrets.GITHUB_TOKEN }}
+        #with:
+          #github_token: ${{ secrets.GITHUB_TOKEN }}
 
 
 
