--- a/.github/workflows/workflow.yml
+++ b/.github/workflows/workflow.yml
@@ -55,8 +55,8 @@ jobs:
 
       - name: Commit and push changes
         uses: actions-js/push@master
-        #with:
-          #github_token: ${{ secrets.GITHUB_TOKEN }}
+        with:
+          github_token: ${{ secrets.GITHUB_TOKEN }}
 
 
 
