--- a/.github/workflows/workflow.yml
+++ b/.github/workflows/workflow.yml
@@ -17,7 +17,8 @@ jobs:
       - name: Git clone the repository
         uses: actions/checkout@v3
         with:
-          token: ${{ secrets.GITHUB_TOKEN }}
+          persist-credentials: false
+          fetch-depth: 0
   
       - name: Configure AWS credentials
         uses: aws-actions/configure-aws-credentials@v1.7.0
