--- a/.github/workflows/workflow.yml
+++ b/.github/workflows/workflow.yml
@@ -53,12 +53,17 @@ jobs:
         uses: mikefarah/yq@master
         with:
           cmd: yq -i '.spec.template.spec.containers[0].image = "$REGISTRY/$REGISTRY_ALIAS/$REPOSITORY:$IMAGE_TAG"' staticweb/manifest/deployment.yml
+      
+      - name: Commit files
+        run: |
+          git config --local user.email "github-actions[bot]@users.noreply.github.com"
+          git config --local user.name "github-actions[bot]"
+          git commit -a -m "Add changes"
 
       - name: Commit and push changes
-        uses: actions-js/push@master
+        uses: ad-m/github-push-action@master
         with:
           github_token: ${{ secrets.GITHUB_TOKEN }}
-
-
+          branch: ${{ github.ref }}
 
       
