--- a/.github/workflows/workflow.yml
+++ b/.github/workflows/workflow.yml
@@ -9,9 +9,9 @@ jobs:
   build:
     name: build image
     runs-on: ubuntu-latest
-    permissions:
-      id-token: write # This is required for requesting the JWT
-      contents: read #This is required for actions/checkout
+    permissions: write-all
+      # id-token: write # This is required for requesting the JWT
+      # contents: read #This is required for actions/checkout
 
     steps:
       - name: Git clone the repository
