--- a/.github/workflows/workflow.yml
+++ b/.github/workflows/workflow.yml
@@ -48,16 +48,12 @@ jobs:
           docker build -t $REGISTRY/$REGISTRY_ALIAS/$REPOSITORY:$IMAGE_TAG .
           echo "Pushing the image to ECR..."
           docker push $REGISTRY/$REGISTRY_ALIAS/$REPOSITORY:$IMAGE_TAG
+          export $IMAGE = $REGISTRY/$REGISTRY_ALIAS/$REPOSITORY:$IMAGE_TAG
 
       - name: Update image version
         uses: mikefarah/yq@master
-        env:
-          REGISTRY: ${{ steps.login-ecr-public.outputs.registry }}
-          REGISTRY_ALIAS: ${{ secrets.ECR_PUBLIC_REPO_ALIAS }}
-          REPOSITORY: ${{ secrets.REPOSITORY }}
-          IMAGE_TAG: ${{ github.sha }}
         with:
-          cmd: yq -i '.spec.template.spec.containers[0].image = strenv($REGISTRY/$REGISTRY_ALIAS/$REPOSITORY:$IMAGE_TAG)' staticweb/manifest/deployment.yml
+          cmd: yq -i '.spec.template.spec.containers[0].image = strenv($IMAGE)' staticweb/manifest/deployment.yml
       
       - name: Commit files
         run: |
