--- a/.github/workflows/workflow.yml
+++ b/.github/workflows/workflow.yml
@@ -48,12 +48,12 @@ jobs:
           docker build -t $REGISTRY/$REGISTRY_ALIAS/$REPOSITORY:$IMAGE_TAG .
           echo "Pushing the image to ECR..."
           docker push $REGISTRY/$REGISTRY_ALIAS/$REPOSITORY:$IMAGE_TAG
-          echo "IMAGE=$REGISTRY/REGISTRY_ALIAS/$REPOSITORY:$IMAGE_TAG" >> "$IMAGE"
+          echo "IMAGE=$REGISTRY/REGISTRY_ALIAS/$REPOSITORY:$IMAGE_TAG" >> $GITHUB_ENV
 
       - name: Update image version
         uses: mikefarah/yq@master
         with:
-          cmd: yq -i '.spec.template.spec.containers[0].image = strenv($IMAGE)' staticweb/manifest/deployment.yml
+          cmd: yq -i '.spec.template.spec.containers[0].image = "${{ env.IMAGE }}"' staticweb/manifest/deployment.yml
       
       - name: Commit files
         run: |
