--- a/.github/workflows/workflow.yml
+++ b/.github/workflows/workflow.yml
@@ -48,7 +48,7 @@ jobs:
           docker build -t $REGISTRY/$REGISTRY_ALIAS/$REPOSITORY:$IMAGE_TAG .
           echo "Pushing the image to ECR..."
           docker push $REGISTRY/$REGISTRY_ALIAS/$REPOSITORY:$IMAGE_TAG
-          echo "IMAGE=$REGISTRY/REGISTRY_ALIAS/$REPOSITORY:$IMAGE_TAG" >> $GITHUB_ENV
+          echo "IMAGE=$REGISTRY/$REGISTRY_ALIAS/$REPOSITORY:$IMAGE_TAG" >> $GITHUB_ENV
 
       - name: Update image version
         uses: mikefarah/yq@master
