--- a/.github/workflows/workflow.yml
+++ b/.github/workflows/workflow.yml
@@ -53,7 +53,7 @@ jobs:
       - name: Update image version
         uses: mikefarah/yq@master
         with:
-          cmd: yq -i '.spec.template.spec.containers[0].image = "${{ env.IMAGE }}"' staticweb/manifest/deployment.yml
+          cmd: yq -i '.spec.template.spec.containers[0].image = ${{ env.IMAGE }}' staticweb/manifest/deployment.yml
       
       - name: Commit files
         run: |
