--- a/.github/workflows/workflow.yml
+++ b/.github/workflows/workflow.yml
@@ -53,7 +53,7 @@ jobs:
       - name: Update image version
         uses: mikefarah/yq@master
         with:
-          cmd: yq -i '.spec.template.spec.containers[0].image = ${{ env.IMAGE }}' staticweb/manifest/deployment.yml
+          cmd: yq -i '.spec.template.spec.containers[0].image = "${{ env.IMAGE }}"' staticweb/manifest/deployment.yml
       
       - name: Commit files
         run: |
@@ -66,9 +66,4 @@ jobs:
         with:
           github_token: ${{ secrets.GITHUB_TOKEN }}
           branch: ${{ github.ref }}
-      # - name: Commit & Push changes
-      #   uses: actions-js/push@master
-      #   with:
-      #     github_token: ${{ secrets.GITHUB_TOKEN }}
-
       
